--- a/Scripts/OTZ.results.manuscript .Rmd
+++ b/Scripts/OTZ.results.manuscript .Rmd
@@ -180,11 +180,78 @@ data_2 %>% filter(spp== "mesopelagics")
 ```
 
 #Change over time graphs for scenario 1 and 2 
+#TO NOTE: Mesopelagics currently are cut out of all of the graphs- need to make sure you have same scale for everything, can include them if want to but don't have to- can just state they were depleted to a certain level
 ```{r}
 #Scenario 1
+#Scenario 2
+change_1_overtime_df <- function(species) {
+  x = seq(0,1, length.out = length(species))
+  color = viridis(n = length(species), option= "B")
+  par(mar = c(6,12,2,4))
+  specieyear1 = run1$annual_Biomass[1, species]
+  specieyearlast = run1$annual_Biomass[length(yearlist), species]
+  value <- (specieyearlast/specieyear1)
+  cbind(species, value)
+}
+change_1_total <- change_1_overtime_df(all_species)
+change_1_total <- as.data.frame(change_1_total)
 
+#Higher dependence on mesopelagics: Diet over 0.05
+change_1_1_df<- change_1_overtime_df(diet_over_0.05)
+change_1_1_df <- as.data.frame(change_1_1_df)
+change_1_1 <- change_1_1_df %>% mutate(value = round(as.numeric(paste(value)), 2), "result" = cut(value, breaks = c(-Inf, 0.99, 1.001, Inf), labels = c("Decreasing", "Neither", "Increasing"), right = TRUE)) %>% arrange(value)
 
+Predator_value <- read_csv("/Users/sallydowd/Documents/GitHub/mesopelagic-fishing/Data/Predator.value.csv")
+change_1_1 <- change_1_1 %>% rename(biomass_prop= value) %>% left_join(Predator_value, by="species")
+change_1_1[9,4] <- "Neither"
 
+change_1_1$Value <- factor(change_1_1$Value, levels = c("Commercial", "Non-commercial", "Both", "Neither"))
+
+change_1_1_plot <- change_1_1 %>% ggplot(aes(col = Value)) + geom_point(aes(x=biomass_prop, y=reorder(species, desc(species)))) + 
+scale_color_manual(values = c("#FF0000","#0000FF", "#00FF70", "#FF00FF")) + 
+ scale_y_discrete(labels= c("Tufted Puffin"= "Tufted puffin", "P. Ocean Perch"= "P. ocean perch", "Leach's S. Petrel"= "Leach's s. petrel", "Longspine thorny."= "Longspine thornyhead", "Shelf rock."= "Shelf rockfish", "Slope rock."= "Slope rockfish", "Yellowtail rock."= "Yellowtail rockfish")) + 
+  geom_vline(xintercept=1, linetype= "solid", color= "black", size= 0.75) +
+  xlim(0.70, 1.30) + 
+xlab("Relative biomass") + ylab("Species with high diet proportion ") + labs(col = "End biomass", title= "A") + standard_theme + 
+ggsave(width = 6, height = 5, "~/Documents/OTZ.manuscript/Images/dietover.50.jpeg")
+change_1_1_plot 
+
+#3: Lower dependence on mesopelagics: Diet under 0.05 
+
+change_1_2_df <- change_1_overtime_df(diet_under_0.05)
+change_1_2_df <- as.data.frame(change_1_2_df)
+change_1_2 <- change_1_2_df %>% mutate(value = round(as.numeric(paste(value)), 2), "result" = cut(value, breaks = c(-Inf, 0.99, 1.001, Inf), labels = c("Decreasing", "Neither", "Increasing"), right = TRUE)) %>% arrange(value)
+change_1_2 <- change_1_2 %>% rename(biomass_prop= value) %>% left_join(Predator_value, by="species") 
+change_1_2[1,4] <- "Neither"
+change_1_2 <- change_1_2[-1,]
+change_1_2$Value <- factor(change_1_2$Value, levels = c("Non-commercial", "Both", "Neither"))
+
+change_1_2_plot <- change_1_2 %>% ggplot(aes(col= Value)) + geom_point(aes(x= biomass_prop, y=reorder(species, desc(species)))) + 
+scale_color_manual(values = c("#0000FF", "#00FF70")) +
+ scale_y_discrete(labels= c("Western Gull"= "Western gull", "Resident Orcas"= "Resident orcas", "Juv. Ele. Seal"= "Juv. n. elephant seal", "Greenstriped"= "Greenstriped rockfish", "Double corm."= "Double cormorant", "Brandt's corm."= "Brandt's cormorant", "Arrowtooth"= "Arrowtooth flounder", "Canary rock."= "Canary rockfish", "Juv. rock."= "Juv. rockfish", "Other cephal."= "Other cephalopod", "Shortspine thorny."= "Shortspine thornyhead", "Widow rock."= "Widow rockfish", "mesopelagics"= "Mesopelagics", "Sea Lions"= "Sea lions", "Splitnose rock."= "Splitnose rockfish")) + 
+ xlim(0.70, 1.30) + geom_vline(xintercept=1, linetype= "solid", color= "black", size= 0.75) + 
+xlab("Relative biomass") + ylab("Species with low diet proportion") + 
+labs(col = "End biomass", title= "B") + standard_theme 
+#+ ggsave(width = 6, height = 5, "~/Documents/OTZ.manuscript/Images/dietunder.50.jpeg")
+change_1_2_plot
+
+#4: No dependence on mesopelagics
+commercial_predators_df <- as.data.frame(commercial_predators) %>% rename(species= commercial_predators)
+noncommercial_predators_df <- as.data.frame(noncommerical_predators) %>% rename(species= noncommerical_predators)
+combo <- rbind(commercial_predators_df, noncommercial_predators_df, by= "species") %>% mutate(Dependence= 1)
+no_dependence <- change_1_total %>% left_join(combo, by= "species")
+no_dependence[is.na(no_dependence)] <- 0 #Functional groups with no dependence on mesopelagics have a 0
+no_dependence <-no_dependence[!duplicated(no_dependence$species),] 
+no_dependence <- no_dependence[-c(15,30),] #Remove mesopelagics and juvenile hake- dependence on mesopelagics but don't have commercial or non-commercial value so will be weird with filtering
+no_dependence_final <- no_dependence %>% filter(Dependence==0)
+
+change_1_3_df <- no_dependence_final
+change_1_3 <- change_1_3_df %>% mutate(value = round(as.numeric(paste(value)), 2), "result" = cut(value, breaks = c(-Inf, 0.99, 1.001, Inf), labels = c("Decreasing", "Neither", "Increasing"), right = TRUE)) %>% arrange(value) %>% rename(biomass_prop= value) 
+change_1_3_plot <- change_1_3 %>% ggplot() + geom_point(aes(x= biomass_prop, y=reorder(species, desc(species)))) + 
+xlim(0.70, 1.30) + geom_vline(xintercept=1, linetype= "solid", color= "black", size= 0.75) + 
+xlab("Relative biomass") + ylab("Species with no diet proportion") + 
+scale_y_discrete(labels= c("Adult N. Ele. Seal"= "Adult n. elephant seal", "amphipods"= "Amphipods", "benthic shp"= "Benthic shrimp", "Brown Pelican"= "Brown pelican", "Cali. gull"= "California gull", "carniv-zoops" = "Carnivorous zooplankton", "copepods"= "Copepods", "Dungeness"= "Dungeness crab", "epibenthic"= "Epibenthic", "euphausiids"= "Euphausiids", "infauna"= "Infauna", "Juv. round."= "Juv. roundfish", "Juv. thorny."= "Juv. thornyhead", "large jellies"= "Large jellies", "micro-zoop"= "Microzooplankton", "Nearshore rock."= "Nearshore rockfish", "Pacific Mackerel"= "Pacific mackerel", "pandalid shp"= "Pandalid shrimp", "phytoplankton"= "Phytoplankton", "Pigeon Guillemot"= "Pigeon guillemot", "Rhino. auk"= "Rhinoceros auklet", "small jellies"= "Small jellies", "surf perch"= "Surf perch", "tanner crb"= "Tanner crab", "Transient Orcas"= "Transient orcas", "Yelloweye rock."= "Yelloweye rockfish")) + labs(col = "End biomass", title= "C") + standard_theme + ggsave(width = 6, height = 8, "~/Documents/OTZ.manuscript/Images/no.diet.50.jpeg")
+change_1_3_plot
 
 #Scenario 2
 change_2_overtime_df <- function(species) {
@@ -200,37 +267,35 @@ change_2_total <- change_2_overtime_df(all_species)
 change_2_total <- as.data.frame(change_2_total)
 
 #Higher dependence on mesopelagics: Diet over 0.05
-change_2_1_df<- change_2_overtime_df(diet_over_0.05)
+change_2_1_df <- change_2_overtime_df(diet_over_0.05)
 change_2_1_df <- as.data.frame(change_2_1_df)
-change_2_1 <- change_2_1_df %>% mutate(value = round(as.numeric(paste(value)), 2), "result" = cut(value, 
-                      breaks = c(-Inf, 0.99, 1.001, Inf),
-                      labels = c("Decreasing", "Neither", "Increasing"),
-                      right = TRUE)) %>% arrange(value)
+change_2_1 <- change_2_1_df %>% mutate(value = round(as.numeric(paste(value)), 2), "result" = cut(value, breaks = c(-Inf, 0.99, 1.001, Inf), labels = c("Decreasing", "Neither", "Increasing"), right = TRUE)) %>% arrange(value)
 
-Predator_value <- read_csv("Data/Predator.value.csv")
 change_2_1 <- change_2_1 %>% rename(biomass_prop= value) %>% left_join(Predator_value, by="species")
-change_2_1[9,4] <- "Neither"
+change_2_1[10,4] <- "Neither"
 
+change_2_1$Value <- factor(change_2_1$Value, levels = c("Commercial", "Non-commercial", "Both", "Neither"))
 change_2_1_plot <- change_2_1 %>% ggplot(aes(col = Value)) + geom_point(aes(x=biomass_prop, y=reorder(species, desc(species)))) + 
-scale_colour_viridis(discrete= TRUE, option= "D") + 
+scale_color_manual(values = c("#FF0000","#0000FF", "#00FF70", "#FF00FF")) + 
  scale_y_discrete(labels= c("Tufted Puffin"= "Tufted puffin", "P. Ocean Perch"= "P. ocean perch", "Leach's S. Petrel"= "Leach's s. petrel", "Longspine thorny."= "Longspine thornyhead", "Shelf rock."= "Shelf rockfish", "Slope rock."= "Slope rockfish", "Yellowtail rock."= "Yellowtail rockfish")) + 
   geom_vline(xintercept=1, linetype= "solid", color= "black", size= 0.75) +
-  xlim(0.75, 1.25) + 
+  xlim(0.70, 1.30) + 
 xlab("Relative biomass") + ylab("Species with high diet proportion ") + labs(col = "End biomass", title= "A") + standard_theme + 
 ggsave(width = 6, height = 5, "~/Documents/OTZ.manuscript/Images/dietover.25.jpeg")
 change_2_1_plot 
 
 #3: Lower dependence on mesopelagics: Diet under 0.05 
-
-#TO NOTE: Mesopelagics currently are cut out of graph- need to make sure you have same scale for everything 
 change_2_2_df <- change_2_overtime_df(diet_under_0.05_2)
 change_2_2_df <- as.data.frame(change_2_2_df)
 change_2_2 <- change_2_2_df %>% mutate(value = round(as.numeric(paste(value)), 2), "result" = cut(value, breaks = c(-Inf, 0.99, 1.001, Inf), labels = c("Decreasing", "Neither", "Increasing"), right = TRUE)) %>% arrange(value)
 change_2_2 <- change_2_2 %>% rename(biomass_prop= value) %>% left_join(Predator_value, by="species") 
 change_2_2[1,4] <- "Neither"
+change_2_2 <- change_2_2[-1,]
+change_2_2$Value <- factor(change_2_2$Value, levels = c("Non-commercial", "Both", "Neither"))
+
 change_2_2_plot <- change_2_2 %>% ggplot(aes(col= Value)) + geom_point(aes(x= biomass_prop, y=reorder(species, desc(species)))) + 
-  scale_colour_viridis(discrete= TRUE, option= "D") + 
- scale_y_discrete(labels= c("Western Gull"= "Western gull", "Resident Orcas"= "Resident orcas", "Juv. Ele. Seal"= "Juv. elephant seal", "Greenstriped"= "Greenstriped rockfish", "Double corm."= "Double cormorant",    "Brandt's corm."= "Brandt's cormorant", "Arrowtooth"= "Arrowtooth flounder", "Canary rock."= "Canary rockfish", "Juv. rock."= "Juvenile rockfish", "Other cephal."= "Other cephalopod", "Shortspine thorny."= "Shortspine thornyhead", "Widow rock."= "Widow rockfish")) + 
+scale_color_manual(values = c("#0000FF", "#00FF70")) +
+ scale_y_discrete(labels= c("Western Gull"= "Western gull", "Resident Orcas"= "Resident orcas", "Juv. Ele. Seal"= "Juv. n. elephant seal", "Greenstriped"= "Greenstriped rockfish", "Double corm."= "Double cormorant", "Brandt's corm."= "Brandt's cormorant", "Arrowtooth"= "Arrowtooth flounder", "Canary rock."= "Canary rockfish", "Juv. rock."= "Juv. rockfish", "Other cephal."= "Other cephalopod", "Shortspine thorny."= "Shortspine thornyhead", "Widow rock."= "Widow rockfish", "mesopelagics"= "Mesopelagics", "Sea Lions"= "Sea lions", "Splitnose rock."= "Splitnose rockfish")) + 
   xlim(0.75, 1.25) + geom_vline(xintercept=1, linetype= "solid", color= "black", size= 0.75) + 
 xlab("Relative biomass") + ylab("Species with low diet proportion") + 
 labs(col = "End biomass", title= "B") + standard_theme 
@@ -238,25 +303,14 @@ labs(col = "End biomass", title= "B") + standard_theme
 change_2_2_plot
 
 #4: No dependence on mesopelagics
-commercial_predators_df <- as.data.frame(commercial_predators) %>% rename(species= commercial_predators)
-noncommercial_predators_df <- as.data.frame(noncommerical_predators) %>% rename(species= noncommerical_predators)
-combo <- rbind(commercial_predators_df, noncommercial_predators_df, by= "species") %>% mutate(Dependence= 1)
-no_dependence <- change_2_total %>% left_join(combo, by= "species")
-no_dependence[is.na(no_dependence)] <- 0 #Functional groups with no dependence on mesopelagics have a 0
-no_dependence <-no_dependence[!duplicated(no_dependence$species),] 
-no_dependence <- no_dependence[-c(15,30),] #Remove mesopelagics and juvenile hake- dependence on mesopelagics but don't have commercial or non-commercial value so will be weird with filtering
-no_dependence_final <- no_dependence %>% filter(Dependence==0)
-
 change_2_3_df <- no_dependence_final
 change_2_3 <- change_2_3_df %>% mutate(value = round(as.numeric(paste(value)), 2), "result" = cut(value, breaks = c(-Inf, 0.99, 1.001, Inf), labels = c("Decreasing", "Neither", "Increasing"), right = TRUE)) %>% arrange(value) %>% rename(biomass_prop= value) 
 change_2_3_plot <- change_2_3 %>% ggplot() + geom_point(aes(x= biomass_prop, y=reorder(species, desc(species)))) + 
-  scale_colour_viridis(discrete= TRUE, option= "D") + 
- scale_y_discrete(labels= c("Western Gull"= "Western gull", "Resident Orcas"= "Resident orcas", "Juv. Ele. Seal"= "Juv. elephant seal", "Greenstriped"= "Greenstriped rockfish", "Double corm."= "Double cormorant",    "Brandt's corm."= "Brandt's cormorant", "Arrowtooth"= "Arrowtooth flounder", "Canary rock."= "Canary rockfish", "Juv. rock."= "Juvenile rockfish", "Other cephal."= "Other cephalopod", "Shortspine thorny."= "Shortspine thornyhead", "Widow rock."= "Widow rockfish")) + 
-  xlim(0.75, 1.25) + geom_vline(xintercept=1, linetype= "solid", color= "black", size= 0.75) + 
-xlab("Relative biomass") + ylab("Species with low diet proportion") + 
-labs(col = "End biomass", title= "B") + standard_theme 
-#+ ggsave(width = 6, height = 5, "~/Documents/OTZ.manuscript/Images/dietunder.25.jpeg")
-change_2_2_plot
+xlim(0.70, 1.30) + geom_vline(xintercept=1, linetype= "solid", color= "black", size= 0.75) + 
+xlab("Relative biomass") + ylab("Species with no diet proportion") + 
+scale_y_discrete(labels= c("Adult N. Ele. Seal"= "Adult n. elephant seal", "amphipods"= "Amphipods", "benthic shp"= "Benthic shrimp", "Brown Pelican"= "Brown pelican", "Cali. gull"= "California gull", "carniv-zoops" = "Carnivorous zooplankton", "copepods"= "Copepods", "Dungeness"= "Dungeness crab", "epibenthic"= "Epibenthic", "euphausiids"= "Euphausiids", "infauna"= "Infauna", "Juv. round."= "Juv. roundfish", "Juv. thorny."= "Juv. thornyhead", "large jellies"= "Large jellies", "micro-zoop"= "Microzooplankton", "Nearshore rock."= "Nearshore rockfish", "Pacific Mackerel"= "Pacific mackerel", "pandalid shp"= "Pandalid shrimp", "phytoplankton"= "Phytoplankton", "Pigeon Guillemot"= "Pigeon guillemot", "Rhino. auk"= "Rhinoceros auklet", "small jellies"= "Small jellies", "surf perch"= "Surf perch", "tanner crb"= "Tanner crab", "Transient Orcas"= "Transient orcas", "Yelloweye rock."= "Yelloweye rockfish")) + labs(col = "End biomass", title= "C") + standard_theme + ggsave(width = 6, height = 8, "~/Documents/OTZ.manuscript/Images/no.diet.25.jpeg")
+change_2_3_plot
 ```
+
 
 
