--- a/Scripts/Multiple.Rpathruns.Rmd
+++ b/Scripts/Multiple.Rpathruns.Rmd
@@ -238,15 +238,19 @@ data_6.2[[i]] <- gather(z_6.2[[i]], key = spp, value = biomass, -month)
 data_6.2[[i]] <- data_6.2[[i]] %>% filter(month==600) %>% mutate(X= i)
 }
 
+#Combine datasets into one: remove the 7 rsim simulations that are outliers
+entire_data_6 <- bind_rows(data_6.2) %>% filter(X == 67)
+entire_data_6 <- bind_rows(data_6.2) %>% filter(!X %in% c(67, 126, 237, 343, 396, 430, 472)) %>% arrange(spp)
+entire_data_6 <- transform(entire_data_6,ID=as.numeric(factor(spp))) #Add column for ID that correlates to each different species 
+
+write.csv(entire_data_6, "/Users/sallydowd/Documents/GitHub/mesopelagic-fishing/Data/entire.data.6.csv")
+
 ```
 
 #Confidence intervals: Calculate 95% CI for each model at month 600 (last month in model) for commercially and non-commerically valuable species 
 
 ```{r}
-#Combine datasets into one: remove the 7 rsim simulations that are outliers
-entire_data_6 <- bind_rows(data_6.2) %>% filter(X == 67)
-entire_data_6 <- bind_rows(data_6.2) %>% filter(!X %in% c(67, 126, 237, 343, 396, 430, 472)) %>% arrange(spp)
-entire_data_6 <- transform(entire_data_6,ID=as.numeric(factor(spp))) #Add column for ID that correlates to each different species 
+read.csv("/Users/sallydowd/Documents/GitHub/mesopelagic-fishing/Data/entire.data.6.csv")
 
 #Calculate CI:
 n <- 500
@@ -338,6 +342,59 @@ theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) +
 theme(legend.position= "none", legend.title= element_text(size = 12), legend.text = element_text(size= 10), axis.text=element_text(size=10), axis.title=element_text(size=12)) + 
 ggsave(width = 6, height = 4, "~/Documents/OTZ.Manuscript/Images/500.noncommercial.25.jpeg")
 noncomm_value_500
+```
+
+#Graphs
+```{r}
+#High diet proportion
+sum_2_1 <- sum_data_6 %>% filter(spp %in% diet_over_0.05) %>% rename(species= "spp") %>% left_join(Predator_value, by= "species")
+sum_2_1[5,12] <- "Neither"
+sum_2_1$Value <- factor(sum_2_1$Value, levels = c("Commercial", "Non-commercial", "Both", "Neither"))
+sum_2_1_graph <- sum_2_1 %>% ggplot(aes(col= Value)) + 
+  geom_pointrange(aes(y=reorder(species, desc(species)), x=median_biomass, xmin=quant_2.5, xmax= quant_97.5), size=0.5, shape=22, fill= "white") + 
+  scale_color_manual(values = c("#FF0000","#0000FF", "#00FF70", "#FF00FF")) + 
+scale_y_discrete(labels= c("Tufted Puffin"= "Tufted puffin", "P. Ocean Perch"= "P. ocean perch", "Leach's S. Petrel"= "Leach's s. petrel", "Longspine thorny."= "Longspine thornyhead", "Shelf rock."= "Shelf rockfish", "Slope rock."= "Slope rockfish", "Yellowtail rock."= "Yellowtail rockfish")) + 
+geom_vline(xintercept=1, linetype= "solid", color= "black", size= 0.75) +
+  xlim(0.70, 1.35) + xlab("Relative biomass") + ylab("Species with high diet proportion") + labs(col = "Value", title= "G") + standard_theme + theme(axis.text.y=element_blank()) + theme(legend.position = "none") +
+ggsave(width = 8, height = 7, "~/Documents/OTZ.Manuscript/Images/Sub.2/500.dietover.25.jpeg")
+sum_2_1_graph
+
+sum_2_2 <- sum_data_6 %>% filter(spp %in% diet_under_0.05) %>% rename(species= "spp") %>% left_join(Predator_value, by= "species")
+#Remove mesopelagics
+sum_2_2 <- sum_2_2[-15,]
+sum_2_2$Value <- factor(sum_2_2$Value, levels = c("Non-commercial", "Both", "Neither"))
+sum_2_2_graph <- sum_2_2 %>% ggplot(aes(col= Value)) + 
+  geom_pointrange(aes(y=reorder(species, desc(species)), x=median_biomass, xmin=quant_2.5, xmax= quant_97.5), size=0.5, shape=22, fill= "white") + 
+  scale_color_manual(values = c("#0000FF", "#00FF70")) +
+ scale_y_discrete(labels= c("Western Gull"= "Western gull", "Resident Orcas"= "Resident orcas", "Juv. Ele. Seal"= "Juv. n. elephant seal", "Greenstriped"= "Greenstriped rockfish", "Double corm."= "Double cormorant", "Brandt's corm."= "Brandt's cormorant", "Arrowtooth"= "Arrowtooth flounder", "Canary rock."= "Canary rockfish", "Juv. rock."= "Juv. rockfish", "Other cephal."= "Other cephalopod", "Shortspine thorny."= "Shortspine thornyhead", "Widow rock."= "Widow rockfish", "mesopelagics"= "Mesopelagics", "Sea Lions"= "Sea lions", "Splitnose rock."= "Splitnose rockfish")) +
+  geom_vline(xintercept=1, linetype= "solid", color= "black", size= 0.75) +
+  xlim(0.70, 1.35) + xlab("Relative biomass") + ylab("Species with low diet proportion") + labs(col = "Value", title= "H") + standard_theme + 
+ggsave(width = 8, height = 7, "~/Documents/OTZ.Manuscript/Images/Sub.2/500.dietunder.25.jpeg")
+sum_2_2_graph
+
+commercial_predators_df <- as.data.frame(commercial_predators) %>% rename(species= commercial_predators)
+noncommercial_predators_df <- as.data.frame(noncommerical_predators) %>% rename(species= noncommerical_predators)
+combo <- rbind(commercial_predators_df, noncommercial_predators_df, by= "species") %>% mutate(Dependence= 1)
+sum_no_dependence <- sum_data_6 %>% rename(species= "spp") %>% left_join(combo, by= "species")
+sum_no_dependence[is.na(sum_no_dependence)] <- 0 #Functional groups with no dependence on mesopelagics have a 0
+sum_no_dependence <-sum_no_dependence[!duplicated(sum_no_dependence$species),] 
+sum_no_dependence <- sum_no_dependence[-c(42,52),] #Remove mesopelagics and juvenile hake- dependence on mesopelagics but don't have commercial or non-commercial value so will be weird with filtering
+sum_no_dependence_final <- sum_no_dependence %>% filter(Dependence==0)
+#4: No dependence on mesopelagics
+sum_2_3 <- sum_no_dependence_final
+sum_2_3_graph <- sum_2_3 %>% ggplot() + 
+  geom_pointrange(aes(y=reorder(species, desc(species)), x=median_biomass, xmin=quant_2.5, xmax= quant_97.5), size=0.5, shape=22, fill= "white") + 
+scale_y_discrete(labels= c("Adult N. Ele. Seal"= "Adult n. elephant seal", "amphipods"= "Amphipods", "benthic shp"= "Benthic shrimp", "Brown Pelican"= "Brown pelican", "Cali. gull"= "California gull", "carniv-zoops" = "Carnivorous zooplankton", "copepods"= "Copepods", "Dungeness"= "Dungeness crab", "epibenthic"= "Epibenthic", "euphausiids"= "Euphausiids", "infauna"= "Infauna", "Juv. round."= "Juv. roundfish", "Juv. thorny."= "Juv. thornyhead", "large jellies"= "Large jellies", "micro-zoop"= "Microzooplankton", "Nearshore rock."= "Nearshore rockfish", "Pacific Mackerel"= "Pacific mackerel", "pandalid shp"= "Pandalid shrimp", "phytoplankton"= "Phytoplankton", "Pigeon Guillemot"= "Pigeon guillemot", "Rhino. auk"= "Rhinoceros auklet", "small jellies"= "Small jellies", "surf perch"= "Surf perch", "tanner crb"= "Tanner crab", "Transient Orcas"= "Transient orcas", "Yelloweye rock."= "Yelloweye rockfish")) +
+  geom_vline(xintercept=1, linetype= "solid", color= "black", size= 0.75) +
+  xlim(0.70, 1.35) + xlab("Relative biomass") + ylab("Species with low diet proportion") + labs(col = "Value", title= "I") + standard_theme + 
+ggsave(width = 8, height = 7, "~/Documents/OTZ.Manuscript/Images/Sub.2/500.nodiet.25.jpeg")
+sum_2_3_graph
+
+library(ggpubr)
+
+ggarrange(change_2_1_plot, change_1_1_plot, sum_2_1_graph  + rremove("y.text") + rremove("x.text"), 
+          ncol = 3, nrow = 1) + 
+ggsave(width = 12, height = 7, "~/Documents/OTZ.Manuscript/Images/Sub.2/proportion.combo.jpeg")
 ```
 
 #Find the average of the input paramters (Biomass, QB, PB, and EE) from the seven outleir models and the 493 remaining models, trying to determine cause of unrealistic biomass estimates in the seven models
