--- a/Scripts/Multiple.Rpathruns.Rmd
+++ b/Scripts/Multiple.Rpathruns.Rmd
@@ -355,7 +355,7 @@ sum_2_1_graph <- sum_2_1 %>% ggplot(aes(col= Value)) +
   scale_color_manual(values = c("#FF0000","#0000FF", "#00FF70", "#FF00FF")) + 
 scale_y_discrete(labels= c("Tufted Puffin"= "Tufted puffin", "P. Ocean Perch"= "P. ocean perch", "Leach's S. Petrel"= "Leach's s. petrel", "Longspine thorny."= "Longspine thornyhead", "Shelf rock."= "Shelf rockfish", "Slope rock."= "Slope rockfish", "Yellowtail rock."= "Yellowtail rockfish")) + 
 geom_vline(xintercept=1, linetype= "solid", color= "black", size= 0.75) +
-  xlim(0.70, 1.35) + xlab("Relative biomass") + ylab("Species with high diet proportion") + labs(col = "Value", title= "G") + standard_theme + theme(axis.text.y=element_blank()) + theme(legend.position = "none") +
+  xlim(0.70, 1.35) + xlab("Relative biomass") + ylab("Species with high diet proportion") + labs(col = "Classification") + standard_theme  +
 ggsave(width = 8, height = 7, "~/Documents/OTZ.Manuscript/Images/Sub.2/500.dietover.25.jpeg")
 sum_2_1_graph
 
@@ -368,7 +368,7 @@ sum_2_2_graph <- sum_2_2 %>% ggplot(aes(col= Value)) +
   scale_color_manual(values = c("#0000FF", "#00FF70")) +
  scale_y_discrete(labels= c("Western Gull"= "Western gull", "Resident Orcas"= "Resident orcas", "Juv. Ele. Seal"= "Juv. n. elephant seal", "Greenstriped"= "Greenstriped rockfish", "Double corm."= "Double cormorant", "Brandt's corm."= "Brandt's cormorant", "Arrowtooth"= "Arrowtooth flounder", "Canary rock."= "Canary rockfish", "Juv. rock."= "Juv. rockfish", "Other cephal."= "Other cephalopod", "Shortspine thorny."= "Shortspine thornyhead", "Widow rock."= "Widow rockfish", "mesopelagics"= "Mesopelagics", "Sea Lions"= "Sea lions", "Splitnose rock."= "Splitnose rockfish")) +
   geom_vline(xintercept=1, linetype= "solid", color= "black", size= 0.75) +
-  xlim(0.70, 1.35) + xlab("Relative biomass") + ylab("Species with low diet proportion") + labs(col = "Value", title= "H") + standard_theme + 
+  xlim(0.70, 1.35) + xlab("Relative biomass") + ylab("Species with low diet proportion") + labs(col = "Classification") + standard_theme + 
 ggsave(width = 8, height = 7, "~/Documents/OTZ.Manuscript/Images/Sub.2/500.dietunder.25.jpeg")
 sum_2_2_graph
 
@@ -386,15 +386,34 @@ sum_2_3_graph <- sum_2_3 %>% ggplot() +
   geom_pointrange(aes(y=reorder(species, desc(species)), x=median_biomass, xmin=quant_2.5, xmax= quant_97.5), size=0.5, shape=22, fill= "white") + 
 scale_y_discrete(labels= c("Adult N. Ele. Seal"= "Adult n. elephant seal", "amphipods"= "Amphipods", "benthic shp"= "Benthic shrimp", "Brown Pelican"= "Brown pelican", "Cali. gull"= "California gull", "carniv-zoops" = "Carnivorous zooplankton", "copepods"= "Copepods", "Dungeness"= "Dungeness crab", "epibenthic"= "Epibenthic", "euphausiids"= "Euphausiids", "infauna"= "Infauna", "Juv. round."= "Juv. roundfish", "Juv. thorny."= "Juv. thornyhead", "large jellies"= "Large jellies", "micro-zoop"= "Microzooplankton", "Nearshore rock."= "Nearshore rockfish", "Pacific Mackerel"= "Pacific mackerel", "pandalid shp"= "Pandalid shrimp", "phytoplankton"= "Phytoplankton", "Pigeon Guillemot"= "Pigeon guillemot", "Rhino. auk"= "Rhinoceros auklet", "small jellies"= "Small jellies", "surf perch"= "Surf perch", "tanner crb"= "Tanner crab", "Transient Orcas"= "Transient orcas", "Yelloweye rock."= "Yelloweye rockfish")) +
   geom_vline(xintercept=1, linetype= "solid", color= "black", size= 0.75) +
-  xlim(0.70, 1.35) + xlab("Relative biomass") + ylab("Species with low diet proportion") + labs(col = "Value", title= "I") + standard_theme + 
+  xlim(0.70, 1.35) + xlab("Relative biomass") + ylab("Species with low diet proportion") + labs(col = "Classification") + standard_theme + 
 ggsave(width = 8, height = 7, "~/Documents/OTZ.Manuscript/Images/Sub.2/500.nodiet.25.jpeg")
 sum_2_3_graph
 
 library(ggpubr)
 
-ggarrange(change_2_1_plot, change_1_1_plot, sum_2_1_graph  + rremove("y.text") + rremove("x.text"), 
-          ncol = 3, nrow = 1) + 
-ggsave(width = 12, height = 7, "~/Documents/OTZ.Manuscript/Images/Sub.2/proportion.combo.jpeg")
+#Seperates legend and saves it as pdf document 
+#legend <- get_legend(plot1_mammals)
+#pdf("/Users/SallyDowd/Documents/OTZ.manuscript/Images/Legends/mammals.legend.pdf")
+#grid.draw(legend)
+#dev.off()
+
+
+high_diet_plot <- ggarrange(change_2_1_plot + rremove("xlab") + rremove("ylab"), change_1_1_plot + rremove("xlab") + rremove("ylab"), common.legend = TRUE, legend= "right", labels= c("A", "B", "C"), sum_2_1_graph + rremove("xlab") + rremove("ylab"), ncol = 3, nrow = 1)
+
+annotate_figure(high_diet_plot, bottom= text_grob("Relative biomass", size=14), left= text_grob("Species with high diet proportion", size=14, rot=90)) + 
+ggsave(width = 12, height = 7, "~/Documents/OTZ.Manuscript/Images/Sub.2/high.diet.combo.jpeg")
+
+low_diet_plot <- ggarrange(change_2_2_plot + rremove("xlab") + rremove("ylab") + rremove("legend"), change_1_2_plot + rremove("xlab") + rremove("ylab") + rremove("legend"), common.legend = TRUE, legend= "right", labels= c("A", "B", "C"), sum_2_2_graph + rremove("xlab") + rremove("ylab"), ncol = 3, nrow = 1)
+
+annotate_figure(low_diet_plot, bottom= text_grob("Relative biomass", size=14), left= text_grob("Species with low diet proportion", size=14, rot=90)) + 
+ggsave(width = 12, height = 7, "~/Documents/OTZ.Manuscript/Images/Sub.2/low.diet.combo.jpeg")
+
+no_diet_plot <- ggarrange(change_2_3_plot + rremove("xlab") + rremove("ylab"), change_1_3_plot + rremove("xlab") + rremove("ylab"), sum_2_3_graph + rremove("xlab") + rremove("ylab"), ncol = 3, nrow = 1)
+
+annotate_figure(no_diet_plot, bottom= text_grob("Relative biomass", size=14), left= text_grob("Species with no diet proportion", size=14, rot=90)) + 
+ggsave(width = 12, height = 7, "~/Documents/OTZ.Manuscript/Images/Sub.2/no.diet.combo.jpeg")
+
 ```
 
 #Find the average of the input paramters (Biomass, QB, PB, and EE) from the seven outleir models and the 493 remaining models, trying to determine cause of unrealistic biomass estimates in the seven models
